--- a/single.html
+++ b/single.html
@@ -3,75 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      height: 100vh;
-      background-color: #fff;
-    }
-    .container {
-      width: 200px;
-      height: 200px;
-      background: #000;
-      border: 20px solid #000;
-      display:flex;
-      justify-content: space-between;
-      align-items: flex-end;
-      padding-bottom: 5px;
-      margin-top: 20px;
-      overflow: hidden;
-      position: relative;
-    }
-    .color {
-      width: 40px;
-      height: 100%;
-      background: purple;
-      position: absolute;
-      bottom: 0;
-      /* align-items: baseline; */
-      
-    }
-    
-    .color:nth-child(2) {
-      background: rgb(185, 142, 187);
-    }
-    .color:nth-child(3) {
-      background: lightcoral;
-    }
-    .color:nth-child(4) {
-      background: rgb(213, 213, 95);
-    }
-    .color:nth-child(5) {
-      background: lightsalmon;
-    }
-    .buttons {
-      display: flex;
-      margin-top: 20px;
-    }
-    button {
-      margin: 0 10px;
-      padding: 10px 20px;
-      cursor: pointer;
-      border: none;
-      border-radius: 5px;
-    }
-    .start {
-      background-color: rgb(96, 167, 96);
-      color: white;
-    }
-    .reset {
-      background-color: violet;
-      color: white;
-    }
-    .stop {
-      background-color: red;
-      color: white;
-    }
-  </style>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="single.css">
 </head>
 <body>
   <div class="container">
